# cloud-platform-mtm

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  readme.md  requirements.txt
.github/workflows/: build.yml
cloud_platform_mtm/: main.py
cloud_platform_mtm/utility/: destination.py  migrateModule.py  migrateResource.py  source.py  utility.py
mtm/: mtm.py
mtm/utilities/: check.py  save.py
mtm/utility/: source.py  utility.py
src/: mtm.py
