[tool.poetry]
name = "cloud-platform-mtm"
version = "1.1.0"
description = ""
authors = ["Mike Bell <mike.bell1@digital.justice.gov.uk>"]
readme = "README.md"

[tool.poetry.scripts]
mtm = "cloud_platform_mtm.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
